app-helm/templates/postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: postgresql
  name: postgres
spec:
  ports:
  - name: tcp-postgresql
    port: 5432
    protocol: TCP
    targetPort: tcp-postgresql
  selector:
    app: postgres
  type: ClusterIP
