app-helm/templates/ingress-api.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: api
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-staging
spec:
  tls:
  - hosts:
    - api.edjx.com
    secretName: api-tls
  rules:
  - host: api.edjx.com
    http:
      paths:
      - backend:
          serviceName: api
          servicePort: 8081
        path: /
