app-helm/templates/ingress-web.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: web
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-staging
spec:
  tls:
  - hosts:
    - web.edjx.com
    secretName: web-tls
  rules:
  - host: web.edjx.com
    http:
      paths:
      - backend:
          serviceName: web
          servicePort: 8081
        path: /
